# fasthtml-marketplace

./: .gitignore  Makefile  README.md  back_button.py  credentials.py  gallery.py  item_card.py  item_details_page.py  main.py  main_layout.py  pyproject.toml  requirements.txt  search_bar.py  storage.py
00_market_full_example/: README.md  back_button.py  item_card.py  main.py  main_layout.py  requirements.txt  storage.py  store.py  upload_form.py
01_market_react_clone/: README.md  api_client.py  gallery.py  item_card.py  item_details_page.py  main.py  main_layout.py  search_bar.py
credentials/: __init__.py
database/: __init__.py  postgresql_db.py  sqlite_db.py
